--- a/index.ipynb
+++ b/index.ipynb
@@ -64,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "number = None\n",
+    "number = 42\n",
     "number"
    ]
   },
@@ -81,7 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "flatiron_mantra = None\n",
+    "flatiron_mantra = \"Change Things\"\n",
     "flatiron_mantra"
    ]
   },
@@ -93,10 +93,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### This is a new header"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Now add a new code cell below this one and write whatever code you want to write."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "message = 'i like to code'"
    ]
   },
   {
@@ -113,6 +131,13 @@
     "## Summary\n",
     "Great work! We are well on our way to mastering Jupyter notebooks! We reviewed using the command line and `git clone`, running cells, and checking our outputs."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
